# Irshad

./: .env.example  .gitignore  README.md  package.json  railway.toml  server.js  tailwind.config.ts  tsconfig.json
desktop-dist/: index.html
prisma/: schema.prisma
scripts/: generate-desktop-branding.js  generate-desktop-shell.js  generate-icons.js  package-desktop-release.js
src/: middleware.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  preferences.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/register/: route.ts
src/app/api/conversations/: route.ts
src/app/api/devices/: route.ts
src/app/api/messages/: route.ts
src/app/api/messages/[id]/: route.ts
src/app/api/sessions/: route.ts
src/app/desktop/: page.tsx
src/app/entry/: page.tsx
src/components/auth/: entry-gate.tsx
src/components/chat/: chat-shell.tsx  composer.tsx  message-list.tsx  settings-panel.tsx  sidebar.tsx
src/components/ui/: button.tsx  input.tsx  textarea.tsx
src/features/attachments/: encrypt-file.ts
src/features/auth/: password.ts  schema.ts
src/features/identity/: keypair.ts
src/features/messaging/: message-state.ts  send-message.ts  use-messenger.ts
src/features/sessions/: establish-session.ts
src/lib/: desktop.ts  encryption.ts  socket.ts
src/lib/crypto/: primitives.ts
src/server/: socket.ts
src/server/socket/: events.ts  index.ts  presence.ts  receipts.ts  typing.ts
src/types/: bcryptjs.d.ts  domain.ts
