[package]
name = "irshad"
version = "0.1.0"
description = "Irshad desktop client"
authors = ["mxw6767-coder"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-window-state = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []

